deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: irazu
    tier: frontend
    track: stable
spec:
  template:
    metadata:
      labels:
        app: irazu
        tier: frontend
        track: stable
    spec:
      containers:
        - name: react-frontend
          image: coys3000/personal-site:configmap-wip-1.4
          volumeMounts:
            - name: irazu-volume
              mountPath: /usr/src/app/config
      volumes:
        - name: irazu-volume
          configMap:
            name: irazu-config
  replicas: 2
  selector:
    matchLabels:
      app: irazu
      tier: frontend
      track: stable
