deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  ports:
    - targetPort: 4040
      port: 4040
  selector:
    app: irazu
    tier: frontend
